
Since we cannot compute Percentage of Nos, we compare:

SUM of Nos from GESIS with Employment rate, by sex from Estatwrap from Germany.

This would show: Integration of Germany. 

In ISEM paper, we had with respect to size of datasets:

1) 2 DS with 20,268 triples
3a) 4 DS with 24,636 triples
3b) 8 DS with 35,482 triples

We now would like to extend this.

==2014-07-09==
* Finished refactoring of logical2physical operator plan:

===LogicalToPhysical Query Plan Strategy===
* See also: http://linked-data-cubes.org/index.php/EmbeddedSesameEngine#LogicalToPhysical_Query_Plan_Strategy
* Short: First used Vistor Pattern, now use Depth-first strategy

<pre>

==2014-07-07==

* Filtering for duplicates at getDimensions(), getHierarchies()... on all "unique" attributes,

now that we have duplication strategy.

* Problem: I have never combined OLAP-to-SPARQL with Convert-Cube/Merge-Cubes.

* Solution: Why can I not implement Convert-Cube/Merge-Cubes using SPARQL in an extended OLAP-to-SPARQL

algorithm? Since 1) Convert-Cube/Merge-Cubes represent "implicit" datasets that I may want to materialise

for faster query processing, 2) whereas Projection, Dice, Slice are issued by the user explicitly,

Convert-Cube / Merge-Cubes are run automatically by the system to increase the number of answers to

an OLAP query (OLAP-to-SPARQL query is fixed on one dataset, OLAP query issues drill-across over all

possible datasets, returning several answers to a query.

* To do OLAP-to-SPARQL over Convert-Cube/Merge-Cubes, I need to execute Convert-Cube/Merge-Cubes separately

and only feed the data cube URI.

Problem:

What operators do we have:

BaseCube

Projection

Dice

Slice

Roll-Up

Drill-Across

What iterators do we have:

GetCubesSparqlIterator <= Not implemented - at all.

OlapDrillAcross2JoinSesameVisitor
